ingress/ingress-color/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  type: ClusterIP
  selector:
    app: blue-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
