ingress/ingress-color/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  type: ClusterIP
  selector:
    app: green-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
