ingress/ingress-color/yellow-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: yellow-svc
spec:
  type: ClusterIP
  selector:
    app: yellow-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
