ingress/ingress-color/ingress-color-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: blue-svc
      port:
        number: 80
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: /blue
        backend:
          service: 
            name: blue-svc
            port:
              number: 80
      - pathType: Prefix
        path: /green
        backend:
          service: 
            name: green-svc
            port:
              number: 80
  - host: color.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: yellow-svc
            port:
              number: 80
